[tool.poetry]
name = "hubspotclient"
version = "0.0.1"
description = "Gen3 Hubspot Client"
authors = ["CTDS UChicago <lgraglia@uchicago.edu>"]

[tool.poetry.dependencies]
python = "^3.6"
cdiserrors = "<2.0.0"
backoff = "~=1.6"
httpx = ">=0.12.1,<1.0.0"
contextvars = { version = "^2.4", python = "<3.7" }
six = "1.16.0"
requests-toolbelt = "^0.9.1"
pycryptodome = "3.9.8"
pcdcutils = {git = "https://github.com/chicagopcdc/pcdcutils.git", rev = "0.1.2"}

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
mock = "^4.0.2"
pytest-cov = "^2.8.1"
pytest-asyncio = "^0.12.0"
truffleHog = "^2.1.11"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
