[tool.poetry]
name = "hubspotclient"
version = "0.0.2"
description = "Gen3 Hubspot Client"
authors = ["CTDS UChicago <lgraglia@uchicago.edu>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
cdiserrors = "<2.0.0"
backoff = "~=1.6"
httpx = ">=0.12.1,<1.0.0"
contextvars = { version = "^2.4", python = "<3.7" }
six = "1.16.0"

[tool.poetry.dev-dependencies]
pytest = "^3.2.3"
mock = "^2.0.0"
pytest-cov = "^2.5.1"
pytest-asyncio = "^0.12.0"
truffleHog = "^2.1.11"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
